setup/ingress.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /
  name: fission-ingress
spec:
  rules:
  - http:
      paths:
      - path: /
        backend:
          serviceName: router
          servicePort: 80
      - path: /api
        backend:
          serviceName: controller
          servicePort: 80
